[Project Overview] Visual overlap issues

--- a/src/components/ProjectTable/projectTable.scss
+++ b/src/components/ProjectTable/projectTable.scss
@@ -20,6 +20,7 @@
 
 .project-data-card {
   &__table {
+    min-width: fit-content;
     height: 100%;
 
     &-body {
